# external_client

./: .eslintrc.json  .prettierignore  .prettierrc.json  LICENSE  README.md  index.html  nvidia.linux.fix  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: eslint.yml  publish-release.yml  test-on-pr.yml
src/: App.css  App.tsx  SettingsModal.tsx  main.tsx
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: conf.rs  main.rs
src/components/: friendlist.tsx  startuploading.tsx  titlebar.tsx
src/contexts/: AuthenticationContext.tsx  LobbyContext.tsx  SocketContext.tsx
src/lib/: jsonFetch.ts
src/pages/: Home.tsx  Lobby.tsx  Login.tsx
