[package]
name = "openchamp-client"
version = "0.0.0"
description = "The launcher for OpenChamp"
authors = ["Leah Lundqvist <leah@pigeon.sh>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
	"window-maximize",
	"window-close",
	"window-start-dragging",
	"window-hide",
	"window-unminimize",
	"window-minimize",
	"window-show",
	"window-unmaximize",
	"shell-open",
	"os-api",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
